# release

./: .gitignore  .releaserc.json  CHANGELOG.md  README.md  action.yml  test  test.sh
.github/: CODEOWNERS
.github/workflows/: release.yml  test-feature.yml
docs/: MIGRATION.md  about.md  authorization.md  best-practices.md  configuration.md  contributing.md  contribution.md  floating-tags.md  gh-authorization.md  history.md  known-issues.md  motivation.md  release-types.md  roadmap.md  semantic-release.md  test-coverage.md  testing.md  troubleshooting.md  use-cases.md
docs/artifact-types/: aws-codeartifact-maven.md  aws-ecr.md  aws-s3.md  git.md  index.md  npmjs.md
docs/examples/env-api/: pyproject.toml
docs/examples/env-api/.github/workflows/: build.yml  release-dev.yml  release.yml
docs/examples/env-api/infrastructure/: lambda.tf  vars.tf
docs/examples/env-api/src/envapi/: lambda_function.py
docs/examples/env-cleanup/: Dockerfile  pom.xml
docs/examples/env-cleanup/infrastructure/: lambda.tf  vars.tf
docs/examples/envctl/: action.yml  package.json  tsconfig.json
docs/examples/envctl/src/: index.ts
docs/examples/gha-release/: action.yml
docs/examples/java-parent/: pom.xml
docs/examples/tt-web/: package.json
docs/examples/tt-web/infrastructure/: main.tf
docs/features/: aws-authorization.md  configuration.md  conventional-commits.md  dev-release.md  floating-tags.md  gh-authorization.md  idempotency.md  maintenance-release.md  prerelease.md  semantic-commits.md  semantic-release.md  version-generation.md
misc/: .git-config  .git-config-v6
(+13 files in other folders)
