[project]
name = "env-api"
version = "2.0.2"
description = "Service to manage environments in non-prod accounts"
readme = "README.md"
requires-python = ">=3.14"
authors = [
    { name = "Alexey Chekulaev" }
]

dependencies = [
    "mypy-boto3-dynamodb>=1.43.0",
    "mypy-boto3-events>=1.43.0",
    "mypy-boto3-s3>=1.43.14",
]

[dependency-groups]
dev = [
    "pylint>=4.0.5",
    "pytest>=9.0.3",
]
